--- a/public/index.css
+++ b/public/index.css
@@ -8,3 +8,10 @@ body {
     margin: 0;
     width: 100%;
 }
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+  }
