--- a/src/components/AdminToDoList/AdminToDo.css
+++ b/src/components/AdminToDoList/AdminToDo.css
@@ -1,33 +1,68 @@
 .adminToDo {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 2px solid black;
+}
+
+.adminToDo__bar {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.adminToDo__input {
+  flex: 1;
+  font-size: 24px;
+}
+
+.adminToDo__btn {
+  border: 2px solid black;
   background-color: #fff;
-  border-radius: 5px;
-  margin: auto;
+  margin-left: 5px;
+  padding: 0px 7px 0px 7px;
+  cursor: pointer;
 }
 
-.listItem {
-  color: #fff;
-  width: 300px;
-  margin: 20px auto;
+.adminToDo__btn:hover {
+  border-color: #00DE00;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
   padding: 5px;
-  height: 50px;
-  background-color: #6ac467;
-  border-radius: 5px;
-  /* transition: ease-in-out; */
 }
 
-.btn {
-    color: #fff;
-    float: right;
+.list__item {
+  display: flex;
+  border: 2px solid black;
+  margin-bottom: 5px;
+  padding: 5px;
 }
 
-.btn:hover {
-    color: red;
+.list__text {
+  flex: 1;
 }
 
-.wide {
-    overflow: hidden;
+.list__input {
+  flex: 1;
 }
 
-.listItem input {
-    width: 100%;
+.list__btn {
+  border: 2px solid #000;
+  padding: 2px 5px 2px 5px;
+  margin-left: 2px;
+  cursor: pointer;
+}
+
+.list__text {
+  flex: 1;
+}
+
+.list__input {
+  flex: 1;
+}
+
+.list__btn:hover {
+  border-color: #00DE00;
 }
