--- a/public/index.css
+++ b/public/index.css
@@ -1,17 +1,21 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    margin: 0;
-    width: 100%;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  width: 100%;
 }
 
 .page-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.popup-overlay {
+    background: rgba(0,0,0,.5);
+}
