--- a/src/components/AdminToDoList/AdminToDo.css
+++ b/src/components/AdminToDoList/AdminToDo.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   padding: 5px;
+  min-width: 300px;
 }
 
 .list__item {
@@ -42,6 +43,10 @@
 
 .list__text {
   flex: 1;
+}
+
+.list__text_crossed {
+  text-decoration: line-through;
 }
 
 .list__input {
